--- a/complete-javascript-course-master/13-Advanced-DOM-Bankist/starter/index.html
+++ b/complete-javascript-course-master/13-Advanced-DOM-Bankist/starter/index.html
@@ -21,6 +21,7 @@
           alt="Bankist logo"
           class="nav__logo"
           id="logo"
+          data-version-control="3"
         />
         <ul class="nav__links">
           <li class="nav__item">
