--- a/complete-javascript-course-master/13-Advanced-DOM-Bankist/starter/index.html
+++ b/complete-javascript-course-master/13-Advanced-DOM-Bankist/starter/index.html
@@ -12,7 +12,6 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Bankist | When Banking meets Minimalist</title>
-    <script defer src="script.js"></script>
   </head>
   <body>
     <header class="header">
@@ -367,5 +366,6 @@
     <div class="overlay hidden"></div>
 
     <!-- <script src="script.js"></script> -->
+    <script src="test.js"></script>
   </body>
 </html>
