Mapty的内容学完了，但十个挑战做的非常费力

--- a/complete-javascript-course-master/15-Mapty/starter/index.html
+++ b/complete-javascript-course-master/15-Mapty/starter/index.html
@@ -123,6 +123,7 @@
           </div>
         </li> -->
       </ul>
+      <button></button>
 
       <p class="copyright">
         &copy; Copyright by
