--- a/complete-javascript-course-master/15-Mapty/starter/index.html
+++ b/complete-javascript-course-master/15-Mapty/starter/index.html
@@ -30,8 +30,8 @@
       crossorigin=""
     ></script>
 
-    <!-- <script defer src="/useToPractice.js"></script> -->
-    <script defer src="script.js"></script>
+    <script defer src="/useToPractice.js"></script>
+    <!-- <script defer src="script.js"></script> -->
     <title>mapty // Map your workouts</title>
   </head>
   <body>
